<resources>
    <string name="app_name">Health</string>
    <string name="home_name">健康检测</string>
    <string name="ok">确定</string>
    <string name="commit">确定</string>
    <string name="commit2">确 定</string>
    <string name="submit">提交</string>
    <string name="submit2">提 交</string>
    <string name="hint">请输入</string>
    <string name="select">请选择</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="home">主页</string>
    <string name="next">下一步</string>
    <string name="last">上一步</string>
    <string name="complete">完成</string>
    <string name="video">视频</string>
    <string name="photo">照片</string>
    <string name="album">相册</string>
    <string name="camera">相机</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="loading">加载中…</string>
    <string name="result">查看结果</string>
    <string name="look">立即查看</string>
    <string name="login">登 录</string>
    <string name="reset">重新检测</string>
    <string name="dialog">温馨提示</string>
    <string name="start_detection">开始检测</string>

    <string name="home_hallo">欢迎来到尚瑞健康世界，我是您的健康助手，小瑞！很高兴为您服务</string>

    <string name="sign_title">请输入个人信息</string>
    <string name="answer_title">问卷调查</string>
    <string name="login_hint">请输入您的手机号验证码登录</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="name_hint">请输入姓名</string>

    <string name="now_play">立即体验</string>
    <string name="pulse_start">开始检测(左手)</string>
    <string name="pulse_start2">开始检测(右手)</string>
    <string name="pulse_stop">停止测量</string>
    <string name="pulse_status">心率检测</string>
    <string name="pulse_complete">脉诊测量完成</string>
    <string name="pulse_fail">脉诊测量失败</string>

    <string name="tongue_verso">舌苔反面照</string>
    <string name="tongue_front">舌苔正面照</string>
    <string name="tongue_face">正脸照片</string>
    <string name="tongue_hint">请完成以下舌苔位置照片拍照</string>
    <string name="start_scan">开始扫描</string>
    <string name="click_photo">点击拍照</string>
    <string name="skip">跳过</string>

    <string name="result_hint">智能分析中,正在进行数据分析与健康评估,请稍后.</string>
    <string name="pulse_hint">请将脉诊仪夹到食指上, 然后点击检测</string>
    <string name="pulse_desc">现在请保持呼吸平稳，放松心情。双手静置于桌面上, 我们的血液在身体里循环一遍，只需要20-50秒 会受到饮食、情绪、运动等因素影响而不断变化。</string>
    <string name="device_cut">切换设备</string>
    <string name="device_link">连接设备</string>
    <string name="device_unlink">未连接设备</string>
    <string name="device_linking">设备连接中</string>
    <string name="link_fail">连接失败</string>
    <string name="link_success">连接成功</string>
    <string name="link_hint">请连接脉诊仪</string>

    <string name="zero">0%</string>
    <string name="hundred">100%</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>

    <string name="login_title">登录</string>
    <string name="phone">手机号</string>
    <string name="phone_un">+86</string>
    <string name="email">邮箱</string>
    <string name="auth_code">验证码</string>
    <string name="user_name">姓名</string>
    <string name="user_age">出生年份</string>
    <string name="user_height">身高(CM)</string>
    <string name="user_kg">体重(KG)</string>
    <string name="user_sex">性别</string>
    <string name="get_code">获取验证码</string>
    <string name="unit_age">年龄</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="check_complete">诊断完成</string>
    <string name="look_result">是否立即查看诊断结果</string>
</resources>