<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pageBg"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dimen_24">

        <include layout="@layout/page_top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_64"
            android:layout_marginBottom="@dimen/dimen_6"
            android:text="@string/phone"
            android:textSize="@dimen/size_18"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_line2"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_un"
                android:textSize="@dimen/size_18"
                android:textStyle="bold" />

            <View
                android:layout_width="2dp"
                android:layout_height="@dimen/size_18"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:background="@color/white" />

            <EditText
                android:id="@+id/login_edit_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingVertical="@dimen/dimen_16"
                android:text="17621760576"
                android:textSize="@dimen/size_18"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginBottom="@dimen/dimen_6"
            android:text="@string/auth_code"
            android:textSize="@dimen/size_18"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_line2"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_edit_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/hint"
                android:inputType="number"
                android:maxLength="6"
                android:paddingVertical="@dimen/dimen_16"
                android:text="123456"
                android:textSize="@dimen/size_18"
                android:textStyle="bold" />

            <View
                android:layout_width="2dp"
                android:layout_height="@dimen/dimen_20"
                android:background="@color/white" />

            <TextView
                android:id="@+id/login_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:text="@string/get_code"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/login_commit"
            style="@style/SingleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/dimen_24"
            android:text="@string/login" />

    </LinearLayout>

</layout>