<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dimen_24">

            <include
                android:id="@+id/top_view"
                layout="@layout/page_top" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/input_line2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_8"
                        android:text="@string/user_name"
                        android:textSize="@dimen/size_16"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/login_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:hint="@string/name_hint"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:paddingVertical="@dimen/dimen_12"
                        android:textSize="@dimen/size_15"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_12"
                        android:text="@string/user_sex"
                        android:textSize="@dimen/size_16"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/login_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/sex_man"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dimen_32"
                            android:background="@drawable/bg_radio"
                            android:button="@color/transparent"
                            android:paddingHorizontal="@dimen/dimen_28"
                            android:text="@string/man"
                            android:textColor="@color/title"
                            android:textSize="@dimen/size_15"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/sex_woman"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dimen_32"
                            android:button="@color/transparent"
                            android:paddingHorizontal="@dimen/dimen_28"
                            android:text="@string/woman"
                            android:textColor="@color/white"
                            android:textSize="@dimen/size_15"
                            android:textStyle="bold" />
                    </RadioGroup>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_40"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_12"
                        android:text="@string/user_age"
                        android:textSize="@dimen/size_16"
                        android:textStyle="bold" />

                    <com.ql.health.custom.widget.CustomNumberPicker
                        android:id="@+id/login_age"
                        style="@style/CustomNumberPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_12"
                        android:text="@string/user_height"
                        android:textSize="@dimen/size_16"
                        android:textStyle="bold" />

                    <com.ql.health.custom.widget.CustomNumberPicker
                        android:id="@+id/login_height"
                        style="@style/CustomNumberPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_12"
                        android:text="@string/user_kg"
                        android:textSize="@dimen/size_16"
                        android:textStyle="bold" />

                    <com.ql.health.custom.widget.CustomNumberPicker
                        android:id="@+id/login_wight"
                        style="@style/CustomNumberPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:minHeight="@dimen/dimen_24"
                android:layout_weight="1" />

            <Button
                android:id="@+id/commit_personal"
                style="@style/SingleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="@dimen/dimen_36"
                android:text="@string/submit2" />

        </LinearLayout>
    </ScrollView>
</layout>