<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="@dimen/dimen_16"
    android:paddingHorizontal="@dimen/dimen_16"
    android:background="@color/white">

<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@null"-->
<!--        android:textCursorDrawable="@drawable/cursor_color"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/size_18"
        android:textColor="@color/title"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/dimen_16"
        android:text="请输入信息"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/dimen_6"
        android:background="@drawable/input_line2"
        android:layout_marginBottom="@dimen/dimen_8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_16"
            android:textColor="@color/label"
            android:text="@string/phone"/>

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textCursorDrawable="@drawable/cursor_color"
            android:gravity="end"
            android:hint="@string/hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/dimen_6"
        android:background="@drawable/input_line2"
        android:layout_marginBottom="@dimen/dimen_8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_16"
            android:textColor="@color/label"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="end"
            android:hint="@string/hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/dimen_6"
        android:background="@drawable/input_line2"
        android:layout_marginBottom="@dimen/dimen_8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_16"
            android:textColor="@color/label"
            android:text="@string/user_name"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="end"
            android:hint="@string/hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/dimen_6"
        android:background="@drawable/input_line2"
        android:layout_marginBottom="@dimen/dimen_8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_16"
            android:textColor="@color/label"
            android:text="@string/user_age"/>

        <EditText
            android:id="@+id/edit_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="end"
            android:hint="@string/hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/dimen_6"
        android:background="@drawable/input_line2"
        android:layout_marginBottom="@dimen/dimen_8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_16"
            android:textColor="@color/label"
            android:text="@string/user_height"/>

        <EditText
            android:id="@+id/edit_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="end"
            android:hint="@string/hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/dimen_6"
        android:background="@drawable/input_line2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_16"
            android:textColor="@color/label"
            android:text="@string/user_kg"/>

        <EditText
            android:id="@+id/edit_kg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="end"
            android:hint="@string/hint"/>
    </LinearLayout>

<!--    <Button-->
<!--        android:id="@+id/edit_commit"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/dimen_16"-->
<!--        android:text="@string/commit"/>-->
</LinearLayout>